# due-diligence-ai

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: README.md  sample_chunks.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
scripts/: 01_download_filings.py  02_parse_and_chunk.py  03_build_vectorstore.py  04_run_eval.py  05_demo.py
src/: config.py
src/api/: server.py
src/evaluation/: eval_dataset.py  metrics.py
src/generation/: executive_summary.py  llm.py  qa_chain.py  risk_assessor.py
src/ingestion/: chunker.py  pdf_parser.py  sec_downloader.py
src/retrieval/: retriever.py
src/vectorstore/: chroma_store.py
tests/: test_api.py  test_generation.py  test_ingestion.py  test_retrieval.py
ui/: app.py
